# tweetbot

./: .env  tailwind.config.ts
instagram-sweet/: .dockerignore  .replit  DEPLOYMENT.md  DEPLOYMENT_VERCEL_RENDER.md  README.md  pnpm-lock.yaml  pyproject.toml  railway.toml  render.yaml  replit.md  vercel.json
instagram-sweet/.agents/: agent_assets_metadata.toml
instagram-sweet/.github/workflows/: keep-alive.yml
instagram-sweet/artifacts/api-server/: nixpacks.toml  package.json  railway.json
instagram-sweet/artifacts/api-server/src/: app.ts
instagram-sweet/artifacts/dashboard/: index.html  requirements.yaml  vercel.json
instagram-sweet/artifacts/dashboard/.replit-artifact/: artifact.toml
instagram-sweet/artifacts/dashboard/src/: App.tsx  config.ts  index.css
instagram-sweet/artifacts/dashboard/src/components/: account-selector.tsx  bulk-job-tracker.tsx
instagram-sweet/artifacts/dashboard/src/hooks/: use-accounts.ts  use-auth.ts  use-bulk-ws.ts  use-dm.ts  use-logs.ts  use-posts.ts  use-queue.ts  use-scheduled-posts.ts  (+3 more)
instagram-sweet/artifacts/instagram-bot-api/: .env.example  alembic.ini  auth_middleware.py  database.py  db_proxy.py  device_pool.py  dm_guard.py  encryption.py  instagram_client.py  instagram_errors.py  main.py  nixpacks.toml  requirements.txt  scheduler.py  utils.py  warmup.py
instagram-sweet/artifacts/instagram-bot-api/alembic/: env.py
instagram-sweet/artifacts/instagram-bot-api/routers/: account.py  auth.py  comments.py  dm.py  logs.py  posts.py  queue.py  settings.py  warmup.py  ws.py
instagram-sweet/lib/api-spec/: openapi.yaml
(+33 files in other folders)
